# dos-lighting

./: .env.example  .gitignore  Patrones de diseño  Principios SOLID  README.md  docker-compose.yml  explicacion-chatbot.txt
backend-ts/: package-lock.json  package.json  tsconfig.json
chatbot-python/: CODE_GUIDE.md  pyproject.toml
chatbot-python/app/: __init__.py  backend_client.py  chat_service.py  config.py  fallback_assistant.py  main.py  openai_client.py  prompts.py  rate_limiter.py  schemas.py  session_store.py  tools.py
chatbot-python/app/adapters/: __init__.py  backend_http_client.py  in_memory_session_store.py  openai_responses_client.py
chatbot-python/app/application/: __init__.py  chat_message_result.py  chat_service.py  fallback_assistant.py
chatbot-python/app/domain/: conversation.py  errors.py  tooling.py
chatbot-python/app/ports/: __init__.py
chatbot-python/tests/: test_chat_service.py  test_main.py  test_session_store.py
database/: V10__perfiles_uso_separados.sql  V11__catalogo_productos_led_expandido.sql  V12__reset_modelos_y_carga_documento.sql  V13__normaliza_modelos_y_variantes_opticas.sql  V14__carga_marcas_modelos_doc_completo.sql  V15__consolida_variantes_proyector.sql  V1__init.sql  V2__seed.sql  V3__catalogos_extendidos.sql  V4__seed_catalogos_extendidos.sql  V5__recomendaciones_resolver.sql  V6__retencion_consultas_metricas.sql  V7__gamas_por_potencia_y_catalogo_casquillos.sql  V8__tipos_polarizado_por_porcentaje.sql  V9__tipos_polarizado_etiquetas_cortas.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js  (+1 more)
(+70 files in other folders)
